--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,9 +17,15 @@
   "plugins": [
     "react"
   ],
+  "settings": {
+    "react": {
+      "version": "18.3"
+    }
+  },
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "warn",
+    "react/jsx-uses-react": "off",
     "indent": [
       "error",
       2
